--- a/index.html
+++ b/index.html
@@ -162,12 +162,6 @@
 						<!-- 开发 -->
 						<div class="mainCont">
 							<div class="quick-alls">
-
-								<div class="quicks">
-									<a href="https://md-i.repl.co/" target="_blank">
-										MD 编辑器
-									</a>
-								</div>
 								<div class="quicks">
 									<a href="https://tool.chinaz.com/" target="_blank">
 										站长之家
@@ -235,9 +229,9 @@
 										GitHub
 									</a>
 								</div>
-								<div class="quicks" data-s="v2ex" title="V2EX">
-									<a href="https://www.v2ex.com/" target="_blank">
-										V2EX
+								<div class="quicks" data-s="linux.do" title="linux.do">
+									<a href="https://linux.do/" target="_blank">
+										linux.do
 									</a>
 								</div>
 								<div class="quicks" data-s="steam" title="Steam">
